# deberDevops

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/calc/: __init__.py  main.py
tests/: test_calc.py
