[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calc-ci-cd-ejemplo"
version = "0.1.0"
description = "Ejemplo simple de CI/CD y empaquetado con Python"
authors = [
    { name = "Tu Nombre" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["calc"]
